courses/430_programming-languages/assignment-5/tests/regression/error/hw4_error14.sml
val prog =
  PROGRAM
    {decls=[],func_decls=[],
     stmts=[ST_EXP {exp=EXP_UNARY {opnd=EXP_BOOL true,opr=UOP_MINUS}}]}
  : program
;
